2006-04-19  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IIndexedCollection.cs:
	  *Collection.cs:
		Make every collection implement an indexed collection.

2006-04-15  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/CustomAttribute.cs:
		Fix handling of types.

2006-04-11  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/IField.cs
	  Mono.Cecil/ITypeDefinition.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/AggressiveReflectionReader.cs
	  Mono.Cecil.Cil/IVariable.cs
	  Mono.Cecil.Cil/MethodBody.cs
	  Mono.Cecil.Cil/VariableDefinition.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
		Don't use interfaces internally.

	* Mono.Cecil/TypeReference.cs:
		Make TypeReference extend MemberReference.

	* Mono.Cecil/Modifiers.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil.Signatures/LocalVarSig.cs
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Fix modifiers on localvar signatures.
		Fix roundtrip of delphi assemblies.

	* Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/ReflectionWriter.cs 
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		Work on complex custom attributes encoding.

	* Mono.Cecil/TableComparers.cs:
		Style.

2006-04-09  Eyal Alaluf  <eyala@mainsoft.com>

    * Mono.Cecil/ReflectionReader.cs
	    Cannot assume that TypeRefs are ordered is such a way that an outer
		class index comes always before all its inner classes.

2006-04-06  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		Clean up things a little bit prior ending
		custom attribute encoding.

	* Mono.Cecil/ReflectionWriter.cs:
		Write custom attributes of parameters
		onyl when all methods have their tokens.

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/AggressiveReflectionReader.cs:
		Handle custom attributes on generic parameters.
