@@ -1,5 +1,9 @@
 2006-04-19  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil.Cil/CodeWriter.cs:
+		Handle the case where an handler points after the last
+		instruction. Now we roundtrip db4o.
+
 	* Mono.Cecil/IIndexedCollection.cs:
 	  *Collection.cs:
 		Make every collection implement an indexed collection.
